modal fixed width and height

--- a/src/index.css
+++ b/src/index.css
@@ -365,6 +365,13 @@ main {
     transition-timing-function: ease-in;
     opacity: 0;
 }
+@media(max-width: 700px) {
+    .modal .formulario{
+        overflow: hidden;
+        max-width: 32rem;
+        max-height: 100vh;
+    }
+}
 .modal label {
     color: var(--blanco);
 }
