--- a/src/index.css
+++ b/src/index.css
@@ -369,7 +369,7 @@ main {
     .modal .formulario{
         overflow: hidden;
         max-width: 32rem;
-        max-height: 100vh;
+        height: 100vh;
     }
 }
 .modal label {
