--- a/src/index.css
+++ b/src/index.css
@@ -370,6 +370,7 @@ main {
         overflow: hidden;
         max-width: 32rem;
         height: 100vh;
+        position: absolute;
     }
 }
 .modal label {
