--- a/src/index.css
+++ b/src/index.css
@@ -364,6 +364,8 @@ main {
     transition-duration: 300ms;
     transition-timing-function: ease-in;
     opacity: 0;
+    height: 100vh;
+    overflow: hidden;
 }
 @media(max-width: 700px) {
     .modal .formulario{
