--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,8 @@ html {
 .fijar {
     overflow: hidden;
     height: 100vh;
+    min-height: 100vh;
+    max-height: 100vh;
 }
 
 h1 {
@@ -67,6 +69,7 @@ header h1 {
     .formulario {
         padding: 5rem 0;
         width: 60rem;
+        max-height: 100vh;
     }
 }
 .formulario legend {
