--- a/src/index.css
+++ b/src/index.css
@@ -347,6 +347,8 @@ main {
     left: 0;
     right: 0;
     bottom: 0;
+    height: 100vh;
+    max-height: 100vh;
 }
 .modal .cerrar-modal {
     position: absolute;
