--- a/src/index.css
+++ b/src/index.css
@@ -378,7 +378,7 @@ main {
         overflow: hidden;
         max-width: 32rem;
         max-height: 100vh;
-        position: absolute;
+        height: 100vh;
     }
 }
 .modal label {
@@ -386,6 +386,7 @@ main {
 }
 body .modal {
     overflow: hidden;
+    height: 100vh;
 }
 
 .modal .formulario.animar {
